Lejátszó kinézetének fejlesztése

--- a/IPTVPlayer/playerskins/line/settings.json
+++ b/IPTVPlayer/playerskins/line/settings.json
@@ -2,6 +2,6 @@
 "clockFontSize_SD" : 24,
 "clockFontSize_HD" : 24,
 "clockFontSize_FHD" : 24,
-"clockFormat_24H" : "%H:%M:%S   %A %d %B",
+"clockFormat_24H" : "%H:%M:%S",
 "clockFormat_12H" : "%I:%M"  
 }
